<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>panda_can_rcv</name>
  <version>0.0.0</version>
  <description>CAN Reciever with Panda</description>
  <maintainer email="avinashumeshsarma@gmail.com">avinashumeshsarma</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>panda_msgs</depend>

  <!-- <buildtool_depend>ament_python</buildtool_depend> -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  

  <member_of_group>rosidl_interface_packages</member_of_group>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
